examples/test/testpolicy13258.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13258
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key14: value2
      key32: value27
      key43: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value33
      podSelector:
        matchLabels:
          key18: value1
          key4: value35
          key38: value9
